--- a/app/views/interface/index.html.erb
+++ b/app/views/interface/index.html.erb
@@ -5,6 +5,5 @@
     <%= javascript_include_tag :application %>
     <title>Proposal</title>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
