--- a/app/views/interface/index.html.erb
+++ b/app/views/interface/index.html.erb
@@ -3,7 +3,7 @@
   <head>
     <%= stylesheet_link_tag :application, :media => :all %>
     <%= javascript_include_tag :application %>
-    <title>Proposal</title>
+    <title>Cinder: Ember.js TodoMVC on Rails</title>
   </head>
   <body></body>
 </html>
