--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -4,7 +4,8 @@
   <p>
     Created by
     <a href="http://github.com/tomdale">Tom Dale</a>,
-    <a href="http://github.com/addyosmani">Addy Osmani</a>
+    <a href="http://github.com/addyosmani">Addy Osmani</a>,
+    <a href="http://github.com/dansowter">Dan Sowter</a>,
   </p>
-  <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+  <p><a href="http://todomvc.com">TodoMVC</a> on Rails</p>
 </footer>
