--- a/app/assets/javascripts/templates/todos.hbs
+++ b/app/assets/javascripts/templates/todos.hbs
@@ -1,7 +1,7 @@
 <section id="todoapp">
   <header id="header">
-    <h1>todos</h1>
-    {{view Ember.TextField id="new-todo" placeholder="What needs to be done?"
+    <h1>Cinder</h1>
+    {{view Ember.TextField id="new-todo" placeholder="Ember.js TodoMVC on Rails"
            valueBinding="newTitle" action="createTodo"}}
   </header>
   {{#if length}}
